--- a/package.json
+++ b/package.json
@@ -18,17 +18,26 @@
     "files": [
         "dist"
     ],
+    "main": "dist/index.js",
     "type": "module",
     "license": "MIT",
     "scripts": {
+        "dev": "vitest",
         "build": "tsc",
-        "ci": "npm run build",
-        "format": "prettier --write ."
+        "ci": "npm run build && npm run check-format && npm run check-exports && npm run lint && npm run test",
+        "format": "prettier --write .",
+        "test": "vitest run",
+        "check-format": "prettier --check .",
+        "check-exports": "attw --pack . --ignore-rules=cjs-resolves-to-esm"
     },
     "devDependencies": {
+        "@arethetypeswrong/cli": "^0.18.2",
+        "@testing-library/react": "^16.3.0",
+        "@types/jest": "^30.0.0",
         "@types/react": "^19.1.9",
         "prettier": "^3.6.2",
-        "typescript": "^5.9.2"
+        "typescript": "^5.9.2",
+        "vitest": "^3.2.4"
     },
     "dependencies": {
         "@fullcalendar/core": "^6.1.18",
