--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "build": "tsc",
         "ci": "npm run build && npm run check-format && npm run check-exports && npm run lint && npm run test",
         "format": "prettier --write .",
+        "lint": "eslint src/**/*.{ts,tsx}",
         "test": "vitest run",
         "check-format": "prettier --check .",
         "check-exports": "attw --pack . --ignore-rules=cjs-resolves-to-esm"
@@ -35,6 +36,9 @@
         "@testing-library/react": "^16.3.0",
         "@types/jest": "^30.0.0",
         "@types/react": "^19.1.9",
+        "@typescript-eslint/eslint-plugin": "^8.39.0",
+        "@typescript-eslint/parser": "^8.39.0",
+        "eslint": "^9.32.0",
         "prettier": "^3.6.2",
         "typescript": "^5.9.2",
         "vitest": "^3.2.4"
