--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,5 +27,6 @@
 
         /* AND if you're building for a library in a monorepo: */
         "declarationMap": true
-    }
+    },
+    "exclude": ["node_modules", "dist", "eslint.config.js"]
 }
