--- a/package.json
+++ b/package.json
@@ -24,9 +24,8 @@
     "scripts": {
         "dev": "vitest",
         "build": "tsc",
-        "ci": "npm run build && npm run check-format && npm run check-exports && npm run lint && npm run test",
+        "ci": "npm run build && npm run check-format && npm run check-exports && npm run test",
         "format": "prettier --write .",
-        "lint": "eslint src/**/*.{ts,tsx}",
         "test": "vitest run",
         "check-format": "prettier --check .",
         "check-exports": "attw --pack . --ignore-rules=cjs-resolves-to-esm"
