--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,5 +28,5 @@
         /* AND if you're building for a library in a monorepo: */
         "declarationMap": true
     },
-    "exclude": ["node_modules", "dist", "eslint.config.js"]
+    "exclude": ["node_modules", "dist", "eslint.config.cjs"]
 }
