--- a/package.json
+++ b/package.json
@@ -28,10 +28,13 @@
         "format": "prettier --write .",
         "test": "vitest run",
         "check-format": "prettier --check .",
-        "check-exports": "attw --pack . --ignore-rules=cjs-resolves-to-esm"
+        "check-exports": "attw --pack . --ignore-rules=cjs-resolves-to-esm",
+        "local-release": "changeset version && changeset publish",
+        "prepublishOnly": "npm run ci"
     },
     "devDependencies": {
         "@arethetypeswrong/cli": "^0.18.2",
+        "@changesets/cli": "^2.29.5",
         "@testing-library/react": "^16.3.0",
         "@types/jest": "^30.0.0",
         "@types/react": "^19.1.9",
