--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "dependencies": {
         "@fullcalendar/core": "^6.1.18",
         "@fullcalendar/daygrid": "^6.1.18",
+        "@fullcalendar/interaction": "^6.1.19",
         "@fullcalendar/react": "^6.1.18"
     },
     "peerDependencies": {
